# brainfuck

./: .gitignore  CMakeLists.txt  Makefile  README.md  brainfuck.c  brainfuck.h  build.cmake  main.c  testall.sh
.github/workflows/: ubuntu.yml
testsuite/: helloworld.bf  oobrain.bf  p0to99.bf  p0to999.bf
testsuite/asciiart/: chess.bf
